--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>Alert Service for Angular 13</h1>
 <p>Not autoclose</p>
 <button (click)="Success()">Success</button>
 <button (click)="Error()">Error</button>
